--- a/angular.json
+++ b/angular.json
@@ -19,6 +19,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/app/images",
+                "output": "assets/images"
               }
             ],
             "styles": [
@@ -72,6 +77,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/app/images",
+                "output": "assets/images"
               }
             ],
             "styles": [
